[package]
name = "tinystorm"
version = "0.0.1"
edition = "2024"
authors = ["OxygenSE sasha.ambartsumov@gmail.com"]
description = "A simple but powerful framework designed primarily for building simple testing low-level games."
license = "MIT"
repository = "https://github.com/SonicallGameXGit/tinystorm"
homepage = "https://github.com/SonicallGameXGit/tinystorm"
readme = "README.md"
keywords = ["gamedev", "glfw", "gl", "opengl", "framework"]
categories = ["game-development", "game-engines", "graphics", "rendering"]

[dependencies]
gl = "0.14.0"
glfw = "0.59.0"
image = "0.25.5"
nalgebra = "0.33.2"
spin_sleep = "1.3.1"
